# Rust 训练营工作空间.
[workspace]
members = [
    "anys",
    "concurrent",
    "files",
    "io",
    "getting-started",
    "oop",
    "unsafes",
    "asyncs",
    "web-server",
    "rust-imap",
    "asyncs-tokio",
    "modules/app",
    "modules/app-lib",
    "macros",
    "errors-handle",
    "errors-handle-example", "loggers",
    "traits",
    "asyncs-tokio-network",
    "closure",
    "rust-ffi",
    "smart-pointers"]


resolver = "2"
