[package]
name = "rcli"
version = "0.1.0"
authors = ["Zero9501"]
edition = "2021"
description = "cli tools file convert"

[dependencies]
# 错误处理
anyhow = "1.0.82"

# 命令行参数处理
clap = { version = "4.5.4", features = ["derive"] }

# CSV 文件处理
csv = "1.3.0"

# 序列化
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
toml = "0.8.12"

structopt = "0.3.26"
