[package]
name = "anys"
version = "0.1.0"
authors = ["Zero9501 <zero9501@outlook.com>"]
edition = "2021"
license = "MIT"
description = "This is an all-powerful toy"

[dependencies]
# 错误处理库
anyhow = "1.0.82"
# 命令行参数处理库
clap = { version = "4.5.4", features = ["derive"] }
# CSV 文件处理库
csv = "1.3.0"
# toml 文件处理库
toml = "0.8.12"
# 序列化处理相关
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
structopt = "0.3.26"

# 随机工具库
rand = "0.8.5"
# 终端控制符工具
ansi_term = "0.12.1"
